syntax = "proto3";
package Protocol;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Protocol";

enum GameErrorCode
{
	GameErrorCode_Success = 0;
	GameErrorCode_Wait = 100;
	GameErrorCode_Error = 102;
	GameErrorCode_AlreadySetWait = 103;
	GameErrorCode_DuplicateLogoutFailed = 104;
}

message PositionData
{
	float x = 1;
	float y = 2;
	float z = 3;
}

message GameReq
{
	message MoveReq
	{
		PositionData position = 1;
		float rotation = 2;
	}

	oneof msg {
		MoveReq moveReq = 1;
	}
}

message GameRes
{
	message MoveRes
	{
	}

	GameErrorCode errorCode = 1;
	oneof msg {
		MoveRes moveRes = 2;
	}
}

message GameProto
{
	oneof msg {
		GameReq gameReq = 1;
		GameRes gameRes = 2;
	}
}